feat: use native MWA protocol for mobile transactions
- Add @solana-mobile/mobile-wallet-adapter-protocol-web3js
- Detect 'Mobile Wallet Adapter' and use transact() directly
- This should properly trigger wallet signing on Seeker/Android

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@instantdb/admin": "^0.22.125",
     "@instantdb/react": "^0.22.123",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.5",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
