--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@instantdb/admin": "^0.22.125",
     "@instantdb/react": "^0.22.123",
+    "@noble/hashes": "^2.0.1",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.5",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
