--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
+    "bs58": "^6.0.0",
     "expo": "~54.0.33",
     "expo-constants": "^18.0.13",
     "expo-linking": "^8.0.11",
