Add Buffer and URL polyfills for Solana web3.js React Native compatibility

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,7 +35,11 @@
     "extra": {
       "router": {
         "origin": false
+      },
+      "eas": {
+        "projectId": "14637e61-9e4a-4f2f-98fc-fcdd9e7650f8"
       }
-    }
+    },
+    "owner": "jpbedoya"
   }
 }
