--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@instantdb/react": "^0.22.137",
+    "@instantdb/react-native": "^0.22.138",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
@@ -20,6 +20,7 @@
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
+    "base-64": "^1.0.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "expo": "~54.0.33",
@@ -37,6 +38,7 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
     "@types/react": "~19.1.0",
     "sharp": "^0.34.5",
     "typescript": "~5.9.2"
