--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "readable-stream": "^4.7.0"
   },
   "devDependencies": {
     "@types/base-64": "^1.0.2",
