--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,6 +39,8 @@
     "readable-stream": "^4.7.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.1.1",
+    "@react-native-community/cli-platform-android": "^20.1.1",
     "@types/base-64": "^1.0.2",
     "@types/react": "~19.1.0",
     "sharp": "^0.34.5",
