--- a/mobile/package.json
+++ b/mobile/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@react-native-community/cli": "^20.1.1",
     "@react-native-community/cli-platform-android": "^20.1.1",
+    "@react-native/metro-config": "^0.84.0",
     "@types/base-64": "^1.0.2",
     "@types/react": "~19.1.0",
     "sharp": "^0.34.5",
