--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,7 @@
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -36,7 +37,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
-    "readable-stream": "^4.7.0"
+    "readable-stream": "^4.7.0",
+    "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.1.1",
