--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
+    "babel-preset-expo": "^54.0.10",
     "base-64": "^1.0.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
