--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@instantdb/react-native": "^0.22.138",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
@@ -25,6 +25,7 @@
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "expo": "~54.0.33",
+    "expo-av": "~16.0.8",
     "expo-constants": "^18.0.13",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.23",
