--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,8 +27,10 @@
     "expo": "~54.0.33",
     "expo-av": "~16.0.8",
     "expo-constants": "^18.0.13",
+    "expo-file-system": "~19.0.21",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.23",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -38,6 +40,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "readable-stream": "^4.7.0",
     "tailwindcss": "^3.4.19"
