fix: remove expo-haptics from plugins (doesn't need config plugin)

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -31,8 +31,7 @@
     },
     "plugins": [
       "expo-router",
-      "expo-asset",
-      "expo-haptics"
+      "expo-asset"
     ],
     "extra": {
       "router": {
