--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,10 @@
     "@react-navigation/native-stack": "^7.3.16",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
+    "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "babel-preset-expo": "^54.0.10",
     "base-64": "^1.0.0",
