--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,15 +15,15 @@
     "@expo/metro-runtime": "~6.1.2",
     "@instantdb/react-native": "^0.22.138",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "^12.0.1",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
-    "@solana/wallet-adapter-base": "^0.9.27",
-    "@solana/wallet-adapter-phantom": "^0.9.28",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
-    "@solana/wallet-adapter-solflare": "^0.6.32",
+    "@solana/client": "^1.7.0",
+    "@solana/kit": "^6.0.1",
+    "@solana/react-hooks": "^1.4.1",
+    "@solana/web3-compat": "^0.0.21",
     "@solana/web3.js": "^1.98.4",
     "babel-preset-expo": "^54.0.10",
     "base-64": "^1.0.0",
@@ -50,6 +50,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.7.3",
     "readable-stream": "^4.7.0",
     "tailwindcss": "^3.4.19"
   },
