--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,6 +40,7 @@
     "expo-router": "^6.0.23",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "html2canvas": "^1.4.1",
     "isomorphic-ws": "^5.0.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
