fix(android): correct expo-audio API usage + add MWA queries intent for wallet discovery

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -37,7 +37,9 @@
     },
     "plugins": [
       "expo-router",
-      "expo-asset"
+      "expo-asset",
+      "expo-audio",
+      "./plugins/with-mwa-android"
     ],
     "extra": {
       "router": {
