--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Die Forward",
     "slug": "die-forward",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
@@ -23,7 +23,8 @@
         "backgroundColor": "#0d0d0d"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.dieforward.app"
+      "package": "com.dieforward.app",
+      "versionCode": 2
     },
     "web": {
       "bundler": "metro",
@@ -31,7 +32,9 @@
       "output": "single",
       "build": {
         "babel": {
-          "include": ["@wallet-ui/react-native-web3js"]
+          "include": [
+            "@wallet-ui/react-native-web3js"
+          ]
         }
       }
     },
