--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
     "expo-audio": "^1.1.1",
+    "expo-blur": "~15.0.8",
     "expo-constants": "^18.0.13",
     "expo-file-system": "~19.0.21",
     "expo-haptics": "^15.0.8",
@@ -63,7 +64,8 @@
     "@types/base-64": "^1.0.2",
     "@types/react": "~19.1.0",
     "sharp": "^0.34.5",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "vercel": "^50.22.1"
   },
   "private": true
 }
